@@ -1,159 +1,162 @@
-.panel {
-position: fixed;
-z-index:10;
-top: 30px;
-right: 0;
-/*display: none;*/
-background: #000000;
-color: #cccccc;
-border:1px solid #111111;
--moz-border-radius-topleft: 20px;
--webkit-border-top-left-radius: 20px;
-border-top-left-radius: 20px;
--moz-border-radius-bottomleft: 20px;
--webkit-border-bottom-left-radius: 20px;
-border-bottom-left-radius: 20px;
-/*width: 200px;*/
-/*height: auto;*/
-padding: 50px 50px 20px 20px;
-filter: alpha(opacity=85);
-opacity: .85;
+.flyout {
+    position                          : fixed;
+    z-index                           : 10;
+    top                               : 30px;
+    right                             : 0;
+    /*display: none;*/
+    background                        : #000000;
+    color                             : #cccccc;
+    border                            : 1px solid #111111;
+    -moz-border-radius-topleft        : 20px;
+    -webkit-border-top-left-radius    : 20px;
+    border-top-left-radius            : 20px;
+    -moz-border-radius-bottomleft     : 20px;
+    -webkit-border-bottom-left-radius : 20px;
+    border-bottom-left-radius         : 20px;
+    /*width: 200px;*/
+    /*height: auto;*/
+    padding                           : 50px 50px 20px 20px;
+    filter                            : alpha(opacity = 85);
+    opacity                           : .85;
 }
 
-.panel p{
-margin: 0 0 15px 0;
-padding: 0;
-color: #cccccc;
+.flyout p {
+    margin  : 0 0 15px 0;
+    padding : 0;
+    color   : #cccccc;
 }
 
-.panel a.profile, .panel a.profile:visited, .panel a.profile:hover{padding-left:25px;
-padding-left:25px;
-background:url(../../../../modules/administration/assets/images/admintoolbar/editpage.png) no-repeat 3px 50%;
+.flyout a.profile, .flyout a.profile:visited, .flyout a.profile:hover {
+    padding-left : 25px;
+    padding-left : 25px;
+    background   : url(../../../../modules/administration/assets/images/admintoolbar/editpage.png) no-repeat 3px 50%;
 }
 
-.panel a.password, .panel a.password:visited, .panel a.password:hover{
-padding-left:25px;
-background:url(../../../../core/assets/images/lock.png) no-repeat 3px 50%;
+.flyout a.password, .flyout a.password:visited, .flyout a.password:hover {
+    padding-left : 25px;
+    background   : url(../../../../core/assets/images/lock.png) no-repeat 3px 50%;
 }
 
-.panel a.logout, .panel a.logout:visited, .panel a.logout:hover{
-padding-left:25px;
-background:url(../../../../modules/administration/assets/images/admintoolbar/logout.png) no-repeat 3px 50%;
+.flyout a.logout, .flyout a.logout:visited, .flyout a.logout:hover {
+    padding-left : 25px;
+    background   : url(../../../../modules/administration/assets/images/admintoolbar/logout.png) no-repeat 3px 50%;
 }
 
-.panel a.preview_on, .panel a.preview_on:visited, .panel a.preview_on:hover{
-padding-left:25px;
-background:url(../../../../core/assets/images/toggle_on.png) no-repeat 5px 50%;
+.flyout a.preview_on, .flyout a.preview_on:visited, .flyout a.preview_on:hover {
+    padding-left : 25px;
+    background   : url(../../../../core/assets/images/toggle_on.png) no-repeat 5px 50%;
 }
 
-.panel a.preview_off, .panel a.preview_off:visited, .panel a.preview_off:hover{
-padding-left:25px;
-background:url(../../../../core/assets/images/toggle_off.png) no-repeat 5px 50%;
+.flyout a.preview_off, .flyout a.preview_off:visited, .flyout a.preview_off:hover {
+    padding-left : 25px;
+    background   : url(../../../../core/assets/images/toggle_off.png) no-repeat 5px 50%;
 }
 
-.panel a, .panel a:visited{
-margin: 0;
-padding: 0;
-color: #9FC54E;
-text-decoration: none;
-/*border-bottom: 1px solid #9FC54E;*/
+.flyout a, .flyout a:visited {
+    margin          : 0;
+    padding         : 0;
+    color           : #9FC54E;
+    text-decoration : none;
+    /*border-bottom: 1px solid #9FC54E;*/
 }
 
-.panel a:hover, .panel a:visited:hover{
-margin: 0;
-padding: 0;
-color: #ffffff;
-text-decoration: none;
-/*border-bottom: 1px solid #ffffff;*/
+.flyout a:hover, .flyout a:visited:hover {
+    margin          : 0;
+    padding         : 0;
+    color           : #ffffff;
+    text-decoration : none;
+    /*border-bottom: 1px solid #ffffff;*/
 }
 
-a.triggerlogin{
-position: fixed;
-z-index:10;
-text-decoration: none;
-top: 30px; right: 0;
-font-size: 0px;
-letter-spacing:-1px;
-font-family: verdana, helvetica, arial, sans-serif;
-color:#fff;
-padding: 10px 10px 10px 0px;
-/*font-weight: 700;*/
-background:#333333 url(../../../../modules/administration/assets/images/admintoolbar/user.png) 15% 55% no-repeat;
-border:1px solid #444444;
--moz-border-radius-topleft: 20px;
--webkit-border-top-left-radius: 20px;
-border-top-left-radius: 20px;
--moz-border-radius-bottomleft: 20px;
--webkit-border-bottom-left-radius: 20px;
-border-bottom-left-radius: 20px;
--moz-border-radius-bottomright: 0px;
--webkit-border-bottom-right-radius: 0px;
-border-bottom-right-radius: 0px;
-display: block;
+a.triggerlogin {
+    position                           : fixed;
+    z-index                            : 10;
+    text-decoration                    : none;
+    top                                : 30px;
+    right                              : 0;
+    font-size                          : 0px;
+    letter-spacing                     : -1px;
+    font-family                        : verdana, helvetica, arial, sans-serif;
+    color                              : #fff;
+    padding                            : 10px 10px 10px 0px;
+    /*font-weight: 700;*/
+    background                         : #333333 url(../../../../modules/administration/assets/images/admintoolbar/user.png) 15% 55% no-repeat;
+    border                             : 1px solid #444444;
+    -moz-border-radius-topleft         : 20px;
+    -webkit-border-top-left-radius     : 20px;
+    border-top-left-radius             : 20px;
+    -moz-border-radius-bottomleft      : 20px;
+    -webkit-border-bottom-left-radius  : 20px;
+    border-bottom-left-radius          : 20px;
+    -moz-border-radius-bottomright     : 0px;
+    -webkit-border-bottom-right-radius : 0px;
+    border-bottom-right-radius         : 0px;
+    display                            : block;
 }
 
-a.triggerlogin:hover, a.triggerlogin:hover:visited{
-position: fixed;
-text-decoration: none;
-top: 30px; right: 0;
-font-size: 11px;
-letter-spacing:-1px;
-font-family: verdana, helvetica, arial, sans-serif;
-color:#fff;
-padding: 10px 10px 10px 40px;
-font-weight: 700;
-background:#222222 url(../../../../modules/administration/assets/images/admintoolbar/user.png) 15% 55% no-repeat;
-border:1px solid #444444;
--moz-border-radius-topleft: 20px;
--webkit-border-top-left-radius: 20px;
-border-top-left-radius: 20px;
--moz-border-radius-bottomleft: 20px;
--webkit-border-bottom-left-radius: 20px;
-border-bottom-left-radius: 20px;
--moz-border-radius-bottomright: 0px;
--webkit-border-bottom-right-radius: 0px;
-border-bottom-right-radius: 0px;
-display: block;
+a.triggerlogin:hover, a.triggerlogin:hover:visited {
+    position                           : fixed;
+    text-decoration                    : none;
+    top                                : 30px;
+    right                              : 0;
+    font-size                          : 11px;
+    letter-spacing                     : -1px;
+    font-family                        : verdana, helvetica, arial, sans-serif;
+    color                              : #fff;
+    padding                            : 10px 10px 10px 40px;
+    font-weight                        : 700;
+    background                         : #222222 url(../../../../modules/administration/assets/images/admintoolbar/user.png) 15% 55% no-repeat;
+    border                             : 1px solid #444444;
+    -moz-border-radius-topleft         : 20px;
+    -webkit-border-top-left-radius     : 20px;
+    border-top-left-radius             : 20px;
+    -moz-border-radius-bottomleft      : 20px;
+    -webkit-border-bottom-left-radius  : 20px;
+    border-bottom-left-radius          : 20px;
+    -moz-border-radius-bottomright     : 0px;
+    -webkit-border-bottom-right-radius : 0px;
+    border-bottom-right-radius         : 0px;
+    display                            : block;
 }
 
-a.active.triggerlogin, a.active.triggerlogin:visited{
-background:#222222 url(../images/minus.png) 15% 55% no-repeat;
-font-size: 0px;
-padding: 10px 15px 10px 0px;
+a.active.triggerlogin, a.active.triggerlogin:visited {
+    background : #222222 url(../images/minus.png) 15% 55% no-repeat;
+    font-size  : 0px;
+    padding    : 10px 15px 10px 0px;
 }
 
-.columns{
-clear: both;
-width: 330px;
-padding: 0 0 20px 0;
-line-height: 22px;
+.columns {
+    clear       : both;
+    width       : 330px;
+    padding     : 0 0 20px 0;
+    line-height : 22px;
 }
 
-.colleft{
-float: left;
-width: 130px;
-line-height: 22px;
+.colleft {
+    float       : left;
+    width       : 130px;
+    line-height : 22px;
 }
 
-.colright{
-float: right;
-width: 130px;
-line-height: 22px;
+.colright {
+    float       : right;
+    width       : 130px;
+    line-height : 22px;
 }
 
-ul{
-padding: 0;
-margin: 0;
-list-style-type: none;
+ul {
+    padding         : 0;
+    margin          : 0;
+    list-style-type : none;
 }
 
-ul li{
-padding: 0;
-margin: 0;
-list-style-type: none;
+ul li {
+    padding         : 0;
+    margin          : 0;
+    list-style-type : none;
 }
 
-hr{
-background-color: #333333;
-height: 1px;
+hr {
+    background-color : #333333;
+    height           : 1px;
 }
