@@ -17,21 +17,7 @@
 
 {/css}
 
-{script unique="flyout" type="text/javascript" yui3mods="1"}
-{literal}
-YUI(EXPONENT.YUI3_CONFIG).use('node', function(Y) {
- Y.on('domready', function() {
-	Y.one('.triggerlogin').on('click', function() {
-		Y.one('.panel').toggleView();
-		Y.one(this).toggleClass('active');
-		return false;
-	});
- });
-});
-{/literal}
-{/script}
-
-<div class="login flyout panel" style="display: none;">
+<div class="module login flyout" style="display: none;">
 	{if $loggedin == false || $smarty.const.PREVIEW_READONLY == 1}
 		<div class="box login-form one">
 			{if $smarty.const.USER_REGISTRATION_USE_EMAIL || $smarty.const.ECOM}
@@ -74,8 +60,8 @@ YUI(EXPONENT.YUI3_CONFIG).use('node', function(Y) {
 				</p>
 			</div>
 		{/if}
-		</div>
-		<a class="triggerlogin" href="#">Login</a>
+    </div>
+    <a class="triggerlogin" href="#">Login</a>
 	{else}
 		<div class="box login-form one">
 			<strong>{'Welcome'|gettext|cat:', %s'|sprintf:$displayname}</strong>{br}{br}
@@ -87,6 +73,20 @@ YUI(EXPONENT.YUI3_CONFIG).use('node', function(Y) {
 			<a class="logout" href="{link action=logout}">{'Logout'|gettext}</a>{br}
 			<a class="{$previewclass}" href="{link controller=administration action=toggle_preview}">{$previewtext}</a>{br}
 		</div>
-		</div>
-		<a class="triggerlogin" href="#">&nbsp;&nbsp;&nbsp;{$displayname}</a>
+    </div>
+    <a class="triggerlogin" href="#">&nbsp;&nbsp;&nbsp;{$displayname}</a>
 	{/if}
+
+{script unique="flyout" type="text/javascript" yui3mods="1"}
+{literal}
+YUI(EXPONENT.YUI3_CONFIG).use('node', function(Y) {
+ Y.on('domready', function() {
+	Y.one('.triggerlogin').on('click', function() {
+		Y.one('.flyout').toggleView();
+		Y.one(this).toggleClass('active');
+		return false;
+	});
+ });
+});
+{/literal}
+{/script}
